# cmux-auto-respond

./: .gitignore  CLAUDE.md  LICENSE  README.md  SNAPSHOT.md  install.sh  pyproject.toml  uninstall.sh
assets/: AppIcon.icns
src/: daemon.sh  gui.py  launchd.plist.template  tuner.py
tests/: test_placeholder.py
